first website Release

--- a/aboutAP.html
+++ b/aboutAP.html
@@ -31,7 +31,8 @@
                     <div class="jumbotron my-5 bg-transparent">
 
                         <p class="text-light lead py-4 px-2 mx-4 w-80 missionStat bg-transparent">
-                            Nginya, the <strong>Akose</strong>(the Bakossi language) translation of "Giant" was
+                            Nginya, the <strong class="text-warning">Akose</strong>(Bakossi language) translation of
+                            "Giant" was
                             concieved by 6 young Cameroonians.
                             Passionate about technology, they came up with this idea to improve on tech in their country
                             and affect
