--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                         <h1 class="text-white text-capitalize font-weight-bold font-itallic text-center">
                             <strong>It's about creating cutting edge technological solutions</strong>
                         </h1>
-                        <!-- <img src="./images/workspace0.jpg" alt="Our Workspace" class="workspace0 d-none">
-                        <img src="./images/workspace1.jpg" alt="Our Workspace" class="workspace1"> -->
+                        <!-- <img src="./images/workspace0.jpg" alt="Our Workspace" class="workspace0"> -->
+                        <!-- <img src="./images/workspace1.jpg" alt="Our Workspace" class="workspace1"> -->
                     </div>
 
                     <div class="jumbotron col-xs-12 col-sm-6 col-md-5 col-lg-5 bg-dark pl-3">
@@ -369,26 +369,16 @@
                         <img src="./images/Sinclaire.jpg" alt="member" class="card-img-top rounded-circle">
                         <div class="card-body bg-secondary">
                             <h5 class="card-title text-capitalize">Sinclaire Kambang</h5>
-                            <p class="card-text">Full stack developer and proficient in using MEAN stack.He is
+                            <p class="card-text d-none sinclaire">Full stack developer and proficient in using MEAN
+                                stack.He is
                                 passionate and addicted lover of .js and .py.
                             </p>
-                            <a href="#branches" target="blank" class="btn btn-outline-warning text-capitalize">
-                                view profile
-                            </a>
-                            <div class="card-footer bg-secondary d-flex justify-content-around">
-                                <a target="blank" href="https://www.facebook.com/joe.favour.10">
+                            <a href="#branche" id="sinclaire" class="btn btn-outline-warning text-capitalize">
+                                See More
+
+                                <a class="ml-5" href="https://www.facebook.com/joe.favour.10">
                                     <i class="fab fa-facebook fa-2x text-dark"></i>
                                 </a>
-                                <a href="#">
-                                    <i class="fab fab fa-twitter fa-2x text-dark"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fab fa-youtube fa-2x text-dark"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fab fa-google fa-2x text-dark"></i>
-                                </a>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -400,26 +390,13 @@
                         <img src="./images/Germa.jpg" alt="member" class="card-img-top rounded-circle">
                         <div class="card-body bg-secondary">
                             <h5 class="card-title text-capitalize">Germanus Keming</h5>
-                            <p class="card-text">A software engineering student at the university of Buea.
+                            <p class="card-text d-none germanus">A software engineering student at the university of
+                                Buea.
                                 Develops in java and android
                             </p>
-                            <a href="#branches" target="blank" class="btn btn-outline-warning text-capitalize">
-                                view profile
+                            <a href="#branches" id="germanus" class="btn btn-outline-warning text-capitalize">
+                                See More
                             </a>
-                            <div class="card-footer bg-secondary d-flex justify-content-around">
-                                <a href="#">
-                                    <i class="fab fa-facebook fa-2x text-dark"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fab fa-twitter fa-2x text-dark"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fab fa-youtube fa-2x text-dark"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fab fa-google fa-2x text-dark"></i>
-                                </a>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -431,26 +408,18 @@
                         <img src="./images/Pastor1.jpg" alt="member" class="card-img-top rounded-circle">
                         <div class="card-body bg-secondary">
                             <h5 class="card-title text-capitalize">Nelson Bechem</h5>
-                            <p class="card-text">Software developer at Nginya technologies and passionate
+                            <p class="card-text d-none pastor">Software developer at Nginya technologies and passionate
                                 about technology. In love with the python programming language.
+
                             </p>
-                            <a href="#branches" target="blank" class="btn btn-outline-warning text-capitalize">
-                                view profile
+                            <a href="#branches" id="pastor" class="btn btn-outline-warning text-capitalize">
+                                See More
                             </a>
-                            <div class="card-footer bg-secondary d-flex justify-content-around">
-                                <a target="blank" href="https://www.facebook.com/nelson.bechem">
-                                    <i class="fab fa-facebook fa-2x text-dark"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fab fa-twitter fa-2x text-dark"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fab fa-youtube fa-2x text-dark"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fab fa-google fa-2x text-dark"></i>
-                                </a>
-                            </div>
+                            <a class="ml-5" href="https://www.facebook.com/nelson.bechem">
+                                <i class="fab fa-facebook fa-2x text-dark"></i>
+                            </a>
+                            <!-- <div class="card-footer bg-secondary d-flex justify-content-around">
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -463,27 +432,18 @@
                         <img src="./images/Nasah.jpg" alt="member" class="card-img-top rounded-circle">
                         <div class="card-body bg-secondary">
                             <h5 class="card-title text-capitalize">Nasah Kuma</h5>
-                            <p class="card-text">Software engineering student at the
+                            <p class="card-text d-none nasah">Software engineering student at the
                                 University of Buea. Specialized and enthusiastic about back-end development with vanilla
                                 PHP.
                             </p>
-                            <a href="#branches" target="blank" class="btn btn-outline-warning text-capitalize">
-                                view profile
+                            <a href="#branche" id="nasah" class="btn btn-outline-warning text-capitalize">
+                                See More
                             </a>
-                            <div class="card-footer bg-secondary d-flex justify-content-around">
-                                <a target="blank" href="https://www.facebook.com/Nasa0spacescapes">
-                                    <i class="fab fa-facebook fa-2x text-dark"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fab fa-twitter fa-2x text-dark"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fab fa-youtube fa-2x text-dark"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fab fa-google fa-2x text-dark"></i>
-                                </a>
-                            </div>
+                            <a class="ml-5" href="https://www.facebook.com/Nasa0spacescapes">
+                                <i class="fab fa-facebook fa-2x text-info"></i>
+                            </a>
+                            <!-- <div class="card-footer bg-secondary d-flex justify-content-around">
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -496,25 +456,15 @@
                         <img src="#" alt="member" class="card-img-top rounded-circle">
                         <div class="card-body bg-secondary">
                             <h5 class="card-title text-capitalize">Mbunganu Lewiston</h5>
-                            <p class="card-text">Graphic Designer and Front-end developer @Nginyatechnologies
+                            <p class="card-text d-none lewis">Graphic Designer and Front-end developer
+                                @Nginyatechnologies
                             </p>
-                            <a target="blank" href="#branches" class="btn btn-outline-warning text-capitalize">
-                                view profile
+                            <a id="lewis" href="#branches" class="btn btn-outline-warning text-capitalize">
+                                See More
                             </a>
-                            <div class="card-footer bg-secondary d-flex justify-content-around">
-                                <a href="#">
-                                    <i class="fab fa-facebook fa-2x text-dark"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fab fa-twitter fa-2x text-dark"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fab fa-youtube fa-2x text-dark"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fab fa-google fa-2x text-dark"></i>
-                                </a>
-                            </div>
+                            <!-- <div class="card-footer bg-secondary d-flex justify-content-around">
+                        
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -527,25 +477,14 @@
                         <img src="./images/edwin.jpg" alt="member" class="card-img-top rounded-circle">
                         <div class="card-body bg-secondary">
                             <h5 class="card-title text-capitalize">Chu Edwin Gah</h5>
-                            <p class="card-text">Network expert and Front-end developer @Nginyatechnologies
+                            <p class="card-text d-none edwin">Network expert and Front-end developer @Nginyatechnologies
                             </p>
-                            <a target="blank" href="#branches" class="btn btn-outline-warning text-capitalize">
-                                view profile
+                            <a id="edwin" href="#branches" class="btn btn-outline-warning text-capitalize">
+                                See More
                             </a>
-                            <div class="card-footer bg-secondary d-flex justify-content-around">
-                                <a href="#">
-                                    <i class="fab fa-facebook fa-2x text-dark"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fab fa-twitter fa-2x text-dark"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fab fa-youtube fa-2x text-dark"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fab fa-google fa-2x text-dark"></i>
-                                </a>
-                            </div>
+                            <!-- <div class="card-footer bg-secondary d-flex justify-content-around">
+                              
+                            </div> -->
                         </div>
                     </div>
                 </div>
