--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
                         <p class="text-warning lead w-100 missionStat p-2 font-italic">
 
-                            <a href="index.html"> Nginya Technologies</a>, creating sustainable mobile,
+                            <a href="index.html"> @Nginya Technologies</a>, we create sustainable mobile,
                             desktop and web applications. An Express production ground, bringing your quality dream to
                             life with high tech power.
                             Your dream, your anchor, your destiny in technology made real.
@@ -240,7 +240,7 @@
                 <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3 text-center my-4">
                     <img src="images/image_api.jpg" alt="API" class="portfolio-icons">
                     <h3 class="text-capitalize my-3 text-white">J2EE API</h3>
-                    <p class="text-white">Authentication API for web, mobile and internet based desktop applications.
+                    <p class="text-white">Authentication API for web, mobile and internet based applications.
                         Efficient, effective and easy to use.
                         Easily adaptable with any front-end. Fast!
                     </p>
@@ -252,7 +252,7 @@
                 <!-- Single Column -->
                 <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3 text-center my-4">
                     <img src="images/image_man_site.jpg" alt="J2EE site" class="portfolio-icons">
-                    <h3 class="text-capitalize my-3 text-white">J2EE site</h3>
+                    <h3 class="text-capitalize my-3 text-white">Taximan</h3>
                     <p class="text-white">Agency management on your table, just with your internet enabled mobile or
                         computer.
                         Easy for all, simple for all, useful to all.
@@ -264,8 +264,8 @@
                 <!-- Single Column -->
                 <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3 text-center my-4">
                     <img src="images/image_android.png" alt="android" class="portfolio-icons">
-                    <h3 class="text-capitalize my-3 text-white">J2EE android</h3>
-                    <p class="text-white">Be there, book it there, have it there.
+                    <h3 class="text-capitalize my-3 text-white">Taximan Android App</h3>
+                    <p class="text-white">
                         Have a taxi pick you up where you are. Save money, time and effort in affording a taxi.
                     </p>
                     <a href="#" class="btn btn-outline-warning w-35 text-uppercase">Check out</a>
@@ -289,7 +289,7 @@
                     </h1>
                     <div class="title-underline bg-warning"></div>
                     <p class="mt-2 text-capitalize text-white">
-                        Lorem ipsum dolor sit amet.</p>
+                        Turning imaginations into Reality</p>
                 </div>
             </div>
             <!-- End of Carousel Title row -->
