--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
                         <p class="text-warning lead w-100 missionStat p-2 font-italic">
 
                             <a href="index.html"> @Nginya Technologies</a>, we create sustainable mobile,
-                            desktop and web applications. An Express production ground, bringing your quality dream to
+                            desktop and web applications, graphics design and we equally provide solution to newtwork
+                            related problems. We are an Express production ground, bringing your quality dream to
                             life with high tech power.
                             Your dream, your anchor, your destiny in technology made real.
 
@@ -288,7 +289,7 @@
                         <strong>designs</strong>
                     </h1>
                     <div class="title-underline bg-warning"></div>
-                    <p class="mt-2 text-capitalize text-white">
+                    <p class="mt-2 text-capitalize text-warning">
                         Turning imaginations into Reality</p>
                 </div>
             </div>
@@ -477,7 +478,8 @@
                         <img src="./images/edwin.jpg" alt="member" class="card-img-top rounded-circle">
                         <div class="card-body bg-secondary">
                             <h5 class="card-title text-capitalize">Chu Edwin Gah</h5>
-                            <p class="card-text d-none edwin">Network expert and Front-end developer @Nginyatechnologies
+                            <p class="card-text d-none edwin">Network Engineer and Front-end developer
+                                @Nginyatechnologies
                             </p>
                             <a id="edwin" href="#branches" class="btn btn-outline-warning text-capitalize">
                                 See More
