--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                             desktop and web applications, graphics design and we equally provide solution to newtwork
                             related problems. We are an Express production ground, bringing your quality dream to
                             life with high tech power.
-                            Your dream, your anchor, your destiny in technology made real.
+                            <!-- Your dream, your anchor, your destiny in technology made real. -->
 
                         </p>
 
