--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css"> -->
     <!-- My styles -->
     <link rel="stylesheet" href="./styles/main.css">
-    <title>Nginya TEchnologies, Buea Cameroon</title>
+    <title>Nginya Technologies, Buea Cameroon</title>
 </head>
 
 <body class="bg-home">
@@ -109,8 +109,8 @@
                     </div>
                 </div>
                 <div class="col-md-6 my-4">
-                    <blockquote class="blockquote text-right">
-                        <p class="text-light">
+                    <blockquote class="blockquote text-left">
+                        <p class="ourQuote">
                             <i class="fas fa-quote-left fa-2x mr-3 text-warning"></i>
                             Shall no longer be a dream when you see it real.
                             Spark your dreams into reality with nginyatechnologies and you wouldn't regret.
@@ -143,7 +143,7 @@
                         <p class="text-warning lead w-100 missionStat p-2 font-italic">
 
                             <a href="index.html"> @Nginya Technologies</a>, we create sustainable mobile,
-                            desktop and web applications, graphics design and we equally provide solution to newtwork
+                            desktop and web applications, graphics design and we equally provide solutions to newtwork
                             related problems. We are an Express production ground, bringing your quality dream to
                             life with high tech power.
                             <!-- Your dream, your anchor, your destiny in technology made real. -->
